update mealplan html

--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -69,36 +69,63 @@
               <p>Next Start Date: <span th:text="${nextStartDate}"/></p>
               <p>Previous Start Date: <span th:text="${prevStartDate}"/></p>
               <!-- <p><span th:each="date: ${weeklyDates}" th:text="${date}"/> </p> -->
+              <div class="d-flex justify-content-between">
+               
+              <a
+                    th:href="@{/user/mealplans(startDate=${prevStartDate},mealPlan=${mealPlan.prev?.id})}"
+                    type="button"
+                    class="btn btn-primary btn-sm"
+                  >
+                    Previous Meal Plan
+              </a> 
+              <a
+              th:href="@{/user/mealplans(startDate=${nextStartDate},mealPlan=${mealPlan.next?.id})}"
+              type="button"
+              class="btn btn-primary btn-sm"
+              >
+                Next Meal Plan
+              </a>
+              </div>
+              
               <div class="container text-center">
-                <div class="row">
-                  <div th:each="date, iter: ${weeklyDates}" class="col menu-column" >
-                    <p th:text="${date[0]}" />
-                    <p th:text="${date[1]}" />
-                    <div 
+                <div class="row" style="margin-bottom: 30px;">
+                  <div th:each="date, iter: ${weeklyDates}" class="col menu-column px-2"  >
+                    <div style="margin: 10px 0; height: 70px;">
+                      <h4 th:text="${date[1]}" />
+                      <span th:text="${date[0]}" />
+                      
+                    </div>
+                    
+                    <div style="height: 400px;">
+                      <div 
                       th:object="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__]}"
                       th:attr="
                       data-recipeId=*{recipe?.id},
                       data-mealPlanId=${mealPlan.id},
                       data-mealType=*{mealType}"
+                      style="height: 50%; background-color:antiquewhite; padding: 10px;"
                       >
-                      <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].mealType}" />
-                      <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].recipe?.name}" />
+                       <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].mealType}" />
+                        <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].recipe?.name}" />
+                      </div>
+                      <div 
+                        th:object="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__]}"
+                        th:attr="
+                        data-recipeId=*{recipe?.id},
+                        data-mealPlanId=${mealPlan.id},
+                        data-mealType=*{mealType}"
+                        style="height: 50%; background-color:beige; padding: 10px;"
+                      >
+                        <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].mealType}" />
+                        <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].recipe?.name}" />
+                      </div>
                     </div>
-                    <div 
-                      th:object="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__]}"
-                      th:attr="
-                      data-recipeId=*{recipe?.id},
-                      data-mealPlanId=${mealPlan.id},
-                      data-mealType=*{mealType}"
-                    >
-                      <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].mealType}" />
-                      <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].recipe?.name}" />
-                    </div>
+                    
                   </div>
                 </div>
 
                
-                <div class="row" style="border:1px solid #eee; padding: 10px;">
+                <!-- <div class="row" style="border:1px solid #eee; padding: 10px;">
                   <div th:each="mealPlanItemDto, iter : ${mealPlan.mealPlanItemsDtos}" th:if="${iter.index % 2 == 0}" class="col menu-column" >
                     <p th:text="${weeklyDates[__${iter.index / 2}__][0]}" />
                     <p th:text="${weeklyDates[__${iter.index / 2}__][1]}" />
@@ -116,8 +143,8 @@
                       <button class="submit" type="submit">Update</button>
                     </form>
                   </div>
-                </div>
-                <div class="row" style="border:1px solid #eee; padding: 10px;margin-bottom: 10px; background-color: whitesmoke">
+                </div> -->
+                <!-- <div class="row" style="border:1px solid #eee; padding: 10px;margin-bottom: 10px; background-color: whitesmoke">
                   <div th:each="mealPlanItemDto, iter : ${mealPlan.mealPlanItemsDtos}" th:if="${iter.index % 2 != 0}" class="col menu-column" >
                     
                     <form
@@ -135,7 +162,7 @@
                       <button class="submit" type="submit">Update</button>
                     </form>
                   </div>
-                </div>
+                </div> -->
               </div>
 
               <!-- <table>
@@ -149,20 +176,7 @@
                 </tr>
               </table> -->
             </div>
-              <a
-                    th:href="@{/user/mealplans(startDate=${nextStartDate},mealPlan=${mealPlan.next?.id})}"
-                    type="button"
-                    class="btn btn-primary btn-sm"
-                  >
-                    Next Meal Plan
-              </a>
-              <a
-                    th:href="@{/user/mealplans(startDate=${prevStartDate},mealPlan=${mealPlan.prev?.id})}"
-                    type="button"
-                    class="btn btn-primary btn-sm"
-                  >
-                    Previous Meal Plan
-              </a>
+             
            
           </div>
         </div>
