--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -93,46 +93,44 @@
               <div class="container text-center">
                 <div
                   th:with="map=${mealPlan.mealPlanItemsMap}"
-                  class="row"
-                  style="margin-bottom: 30px"
+                  class="row meal-plan-main_wrapper"
                 >
                   <date
                     th:each="date, iter: ${weeklyDates}"
                     class="col menu-column px-2"
                   >
-                    <div style="margin: 10px 0; height: 70px">
+                    <div class="date">
                       <h4 th:text="${date[1]}" />
                       <span th:text="${date[0]}" />
                     </div>
-                    <div style="height: 400px">
+                    <div class="column-wrapper">
                       <!-- first row lunch -->
                       <div
                         th:with="mealType=${mealTypes[__${iter.index + iter.index}__]}"
-                        style="
-                          height: 50%;
-                          background-color: antiquewhite;
-                          padding: 10px;
-                        "
+                        class="menu-item-div"
                       >
                         <!-- if mealtype exist, display mealplanitem -->
-                        <div th:if="${#maps.containsKey(map, mealType)}">
+                        <div th:if="${#maps.containsKey(map, mealType)}" class="h-100">
                           <div
                             th:object="${map.get(mealType)}"
                             th:attr="
-                              data-recipeId=*{recipe?.id},
-                              data-mealPlanId=${mealPlan.id},
-                              data-mealType=*{mealType}"
+                              data-recipeid=*{recipe?.id},
+                              data-mealplanid=${mealPlan.id},
+                              data-mealtype=*{mealType}"
+                            class="btn h-100 w-100 menu-item lunch" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
                             <p th:text="*{mealType}" />
                             <p th:text="*{recipe?.name} " />
                           </div>
                         </div>
                         <!-- else display empty block -->
-                        <div th:unless="${#maps.containsKey(map, mealType)}">
+                        <div th:unless="${#maps.containsKey(map, mealType)}" class="h-100">
                           <div
                             th:attr="
-                              data-mealPlanId=${mealPlan.id},
-                              data-mealType=${mealType}"
+                              data-recipeid=null,
+                              data-mealplanid=${mealPlan.id},
+                              data-mealtype=${mealType}"
+                              class="btn h-100 w-100 menu-item lunch" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
                             <p th:text="${mealType}" />
                           </div>
@@ -142,31 +140,30 @@
                       <!-- second row dinner -->
                       <div
                         th:with="mealType=${mealTypes[__${iter.index + iter.index + 1}__]}"
-                        style="
-                          height: 50%;
-                          background-color: beige;
-                          padding: 10px;
-                        "
+                        class="menu-item-div "
                       >
                         <!-- if mealtype exist, display mealplanitem -->
-                        <div th:if="${#maps.containsKey(map, mealType)}">
+                        <div th:if="${#maps.containsKey(map, mealType)}" class="h-100">
                           <div
                             th:object="${map.get(mealType)}"
                             th:attr="
-                                                data-recipeId=*{recipe?.id},
-                                                data-mealPlanId=${mealPlan.id},
-                                                data-mealType=*{mealType}"
+                              data-recipeid=*{recipe?.id},
+                              data-mealplanid=${mealPlan.id},
+                              data-mealtype=*{mealType}"
+                              class="btn h-100 w-100 menu-item dinner" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
                             <p th:text="*{mealType}" />
                             <p th:text="*{recipe?.name} " />
                           </div>
                         </div>
                         <!-- else display empty block -->
-                        <div th:unless="${#maps.containsKey(map, mealType)}">
+                        <div th:unless="${#maps.containsKey(map, mealType)}" class="h-100">
                           <div
                             th:attr="
-                                                data-mealPlanId=${mealPlan.id},
-                                                data-mealType=${mealType}"
+                              data-recipeid=null,
+                              data-mealplanid=${mealPlan.id},
+                              data-mealtype=${mealType}"
+                              class="btn h-100 w-100 menu-item dinner"  type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
                             <p th:text="${mealType}" />
                           </div>
@@ -176,53 +173,40 @@
                   </date>
                 </div>
               </div>
-
-              <!-- <div class="container text-center">
-                <div class="row" style="margin-bottom: 30px;">
-                  <div th:each="date, iter: ${weeklyDates}" class="col menu-column px-2"  >
-                    <div style="margin: 10px 0; height: 70px;">
-                      <h4 th:text="${date[1]}" />
-                      <span th:text="${date[0]}" />
-                    </div>
-                    
-                    <div style="height: 400px;">
-                      <div 
-                      th:object="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__]}"
-                      th:attr="
-                      data-recipeId=*{recipe?.id},
-                      data-mealPlanId=${mealPlan.id},
-                      data-mealType=*{mealType}"
-                      style="height: 50%; background-color:antiquewhite; padding: 10px;"
-                      > -->
-              <!-- <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].mealType}" />
-                        <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index}__].recipe?.name}" /> -->
-              <!-- <p th:text="*{mealType}" />
-                        <p th:text="*{recipe?.name} " />
-                      </div>
-                      <div 
-                        th:object="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__]}"
-                        th:attr="
-                        data-recipeId=*{recipe?.id},
-                        data-mealPlanId=${mealPlan.id},
-                        data-mealType=*{mealType}"
-                        style="height: 50%; background-color:beige; padding: 10px;"
-                      > -->
-              <!-- <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].mealType}" />
-                        <p th:text="${mealPlan.mealPlanItemsDtos[__${iter.index + iter.index + 1}__].recipe?.name}" /> -->
-              <!-- <p th:text="*{mealType}" />
-                        <p th:text="*{recipe?.name} " />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="savedRecipes" tabindex="-1" role="dialog" aria-labelledby="savedRecipeCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="savedRecipeModalTitle">Saved Recipes</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <button th:each="recipe : ${savedRecipes}" th:text="${recipe.name}" th:attr="data-recipeid=${recipe.id}" type="button" class="btn m-2 recipe-button" />
+          </div>
+          <div class="modal-footer">
+            <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+            <button id="update-button" type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <footer th:replace="~{fragments/general :: footer}">
       <p>Testing Footer</p>
     </footer>
+    <script src="/js/meal-plan-handler.js" type="application/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
   </body>
 </html>
