--- a/src/main/resources/templates/mealplan.html
+++ b/src/main/resources/templates/mealplan.html
@@ -64,7 +64,7 @@
         <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
           <div class="row">
             <div>
-              <p th:text="${user.firstName}" />
+              <!-- <p th:text="${user.firstName}" />
               <p>
                 <span th:text="${#lists.size(user.mealPlans)}" />Meal Plans
                 Saved
@@ -72,22 +72,22 @@
               <p th:text="${mealPlan.id}" />
               <p>Start Date: <span th:text="${mealPlan.startDate}" /></p>
               <p>Next Start Date: <span th:text="${nextStartDate}" /></p>
-              <p>Previous Start Date: <span th:text="${prevStartDate}" /></p>
+              <p>Previous Start Date: <span th:text="${prevStartDate}" /></p> -->
               <!-- <p><span th:each="date: ${weeklyDates}" th:text="${date}"/> </p> -->
-              <div class="d-flex justify-content-between">
+              <div class="d-flex justify-content-between my-3">
                 <a
                   th:href="@{/user/mealplans(startDate=${prevStartDate},mealPlan=${mealPlan.prev?.id})}"
                   type="button"
-                  class="btn btn-primary btn-sm"
+                  class="btn btn-secondary btn-sm"
                 >
-                  Previous Meal Plan
+                  Previous
                 </a>
                 <a
                   th:href="@{/user/mealplans(startDate=${nextStartDate},mealPlan=${mealPlan.next?.id})}"
                   type="button"
-                  class="btn btn-primary btn-sm"
+                  class="btn btn-secondary btn-sm"
                 >
-                  Next Meal Plan
+                  Next
                 </a>
               </div>
               <div class="container text-center">
@@ -100,8 +100,8 @@
                     class="col menu-column px-2"
                   >
                     <div class="date">
-                      <h4 th:text="${date[1]}" />
-                      <span th:text="${date[0]}" />
+                      <h4 th:text="${date[1]}" class="meal-date"/>
+                      <span th:text="${date[0]}" class="meal-day"/>
                     </div>
                     <div class="column-wrapper">
                       <!-- first row lunch -->
@@ -119,8 +119,9 @@
                               data-mealtype=*{mealType}"
                             class="btn h-100 w-100 menu-item lunch" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
-                            <p th:text="*{mealType}" />
-                            <p th:text="*{recipe?.name} " />
+                            <!-- <p th:text="*{mealType}" /> -->
+                            <p class="meal-type-tag">Lunch</p>
+                            <p class="meal-item-wrapper" th:text="*{recipe?.name} " />
                           </div>
                         </div>
                         <!-- else display empty block -->
@@ -132,7 +133,8 @@
                               data-mealtype=${mealType}"
                               class="btn h-100 w-100 menu-item lunch" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
-                            <p th:text="${mealType}" />
+                            <!-- <p th:text="${mealType}" /> -->
+                            <p class="meal-type-tag">Lunch</p>
                           </div>
                         </div>
                       </div>
@@ -152,8 +154,9 @@
                               data-mealtype=*{mealType}"
                               class="btn h-100 w-100 menu-item dinner" type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
-                            <p th:text="*{mealType}" />
-                            <p th:text="*{recipe?.name} " />
+                            <!-- <p th:text="*{mealType}" /> -->
+                            <p class="meal-type-tag">Dinner</p>
+                            <p class="meal-item-wrapper" th:text="*{recipe?.name} " />
                           </div>
                         </div>
                         <!-- else display empty block -->
@@ -165,7 +168,8 @@
                               data-mealtype=${mealType}"
                               class="btn h-100 w-100 menu-item dinner"  type="button" data-toggle="modal" data-target="#savedRecipes"
                           >
-                            <p th:text="${mealType}" />
+                            <!-- <p th:text="${mealType}" /> -->
+                            <p class="meal-type-tag">Dinner</p>
                           </div>
                         </div>
                       </div>
