--- a/src/main/resources/templates/recipe.html
+++ b/src/main/resources/templates/recipe.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="col-md-9 col-lg-10 dashboard-content-container-wrapper">
+        <div class="col-md-7 col-lg-8 dashboard-content-container-wrapper">
           <a
             th:if="${savedByUser}"
             th:href="@{/user/recipes}"
@@ -120,6 +120,7 @@
             </a>
           </div>
         </div>
+        <div class="col-md-2" style="border-left: 1px solid #eee;"></div>
       </div>
     </div>
     <footer th:replace="~{fragments/general :: footer}">
